--- a/src/app/admin/dashboard/dashboard.component.html
+++ b/src/app/admin/dashboard/dashboard.component.html
@@ -1,39 +1,41 @@
-<div class="row">
-  <!-- left right content code start -->
-  <div class="col-md-9">
-    <div class="row mb-4 mt-4">
-      <div class="col-xl-6 col-lg-6 col-md-6 col-sm-12">
-        <div class="section-header-breadcrumb-content">
-          <h1 class="font-23 mb-1">Hello, Mr Admin!</h1>
-          <span class="text-muted font-weight-bolder">Welcome back to insurance portal Admin</span>
-          <form #filterForm="ngForm">
-            <select [(ngModel)]="filter" name="Filter" (ngModelChange)="onFilterChanged($event)"
-              class="font-weight-600 float-lg-right float-md-right form-control mt-lg-5 mt-md-5 mt-sm-2 width-per-35">
-              <option *ngFor="let item of filters" [value]="item.value">{{item.option}}</option>
-            </select>
-          </form>
+<section class="section">
+  <div class="row">
+    <!-- left right content code start -->
+    <div class="col-md-9">
+      <div class="row mb-4 mt-4">
+        <div class="col-xl-6 col-lg-6 col-md-6 col-sm-12">
+          <div class="section-header-breadcrumb-content">
+            <h1 class="font-23 mb-1">Hello, Mr Admin!</h1>
+            <span class="text-muted font-weight-bolder">Welcome back to insurance portal Admin</span>
+            <form #filterForm="ngForm">
+              <select [(ngModel)]="filter" name="Filter" (ngModelChange)="onFilterChanged($event)"
+                class="font-weight-600 float-lg-right float-md-right form-control mt-lg-5 mt-md-5 mt-sm-2 width-per-35">
+                <option *ngFor="let item of filters" [value]="item.value">{{item.option}}</option>
+              </select>
+            </form>
+          </div>
+        </div>
+        <div class="col-xl-6 col-lg-6 col-md-6 col-sm-12 pr-0">
+          <app-sale-widget></app-sale-widget>
         </div>
       </div>
-      <div class="col-xl-6 col-lg-6 col-md-6 col-sm-12 pr-0">
-        <app-sale-widget></app-sale-widget>
+      <app-note-widget [_filter]="filter"></app-note-widget>
+      <div class="row dashboard-box">
+        <div class="col-md-6">
+          <app-quote-widget [_filter]="filter"></app-quote-widget>
+        </div>
+        <div class="col-md-6 bg-white rounded text-dark">
+          <h4 class="font-15 mb-4 mt-4 text-muted">Activity List</h4>
+          <app-basket-widget [_filter]="filter"></app-basket-widget>
+        </div>
       </div>
     </div>
-    <app-note-widget [_filter]="filter"></app-note-widget>
-    <div class="row dashboard-box">
-      <div class="col-md-6">
-        <app-quote-widget [_filter]="filter"></app-quote-widget>
-      </div>
-      <div class="col-md-6 bg-white rounded text-dark">
-        <h4 class="font-15 mb-4 mt-4 text-muted">Activity List</h4>
-        <app-basket-widget [_filter]="filter"></app-basket-widget>
-      </div>
-    </div>
-  </div>
-  <!-- left right content code End -->
+    <!-- left right content code End -->
 
-  <!-- right side bar code start -->
-  <div class="col-md-3">
-    <app-issue-widget></app-issue-widget>
+    <!-- right side bar code start -->
+    <div class="col-md-3">
+      <app-issue-widget></app-issue-widget>
+    </div>
+    <!-- right side bar code end -->
   </div>
-  <!-- right side bar code end -->
-</div>
+</section>
