--- a/src/app/shared/dialog/delete-user/delete-user.component.html
+++ b/src/app/shared/dialog/delete-user/delete-user.component.html
@@ -1,6 +1,6 @@
 <div class="user-managment-modal delete-modal">
   <div class="modal fade" id="user-delete-modal" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle"
-    aria-hidden="true" [ngClass]="{'show': showModal}">
+    aria-hidden="true">
     <div class="modal-dialog modal-dialog-centered" role="document">
       <div class="modal-content">
         <div class="modal-body">
@@ -12,9 +12,9 @@
           </div>
         </div>
         <div class="modal-footer bg-whitesmoke br">
-          <button type="button" class="btn btn-secondary border-0 shadow-none font-weight-normal"
-            (click)="showModal=false">Cancel</button>
-          <button type="submit" class="btn btn-primary font-weight-normal">Delete</button>
+          <button type="button" class="btn btn-secondary border-0 shadow-none font-weight-normal" data-dismiss="modal"
+            #closeBtn>Cancel</button>
+          <button type="button" class="btn btn-primary font-weight-normal" (click)="deleteUser()">Delete</button>
         </div>
       </div>
     </div>
