--- a/src/app/shared/dialog/edit-user/edit-user.component.html
+++ b/src/app/shared/dialog/edit-user/edit-user.component.html
@@ -1,6 +1,6 @@
 <div class="user-managment-modal">
   <div class="modal fade" id="user-edit-modal" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle"
-    aria-hidden="true" [ngClass]="{'show': showModal}">
+    aria-hidden="true">
     <div class="modal-dialog modal-lg" role="document">
       <form>
         <div class="modal-content">
@@ -56,7 +56,7 @@
                   <div class="form-group row">
                     <label class="col-sm-3 col-form-label">New Password:</label>
                     <div class="col-sm-9">
-                      <input type="email" class="form-control" name="password" [(ngModel)]="updateData.password"
+                      <input type="password" class="form-control" name="password" [(ngModel)]="updateData.password"
                         required>
                     </div>
                   </div>
@@ -64,7 +64,7 @@
                   <div class="form-group row">
                     <label class="col-sm-3 col-form-label">Repeat Password:</label>
                     <div class="col-sm-9">
-                      <input type="email" class="form-control" name="repeatPassword"
+                      <input type="password" class="form-control" name="repeatPassword"
                         [(ngModel)]="updateData.repeatPassword" required>
                     </div>
                   </div>
@@ -74,7 +74,7 @@
           </div>
           <div class="modal-footer bg-whitesmoke br">
             <button type="button" class="btn btn-secondary border-0 shadow-none font-weight-normal"
-              (click)="showModal=false">Cancel</button>
+              (click)="closeModal()" data-dismiss="modal">Cancel</button>
             <button type="submit" class="btn btn-primary font-weight-normal" (click)="editUser()">Create</button>
           </div>
         </div>
