--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -4264,11 +4264,12 @@ table tr:hover .table-links {
 
 .modal-body {
   padding-top: 15px;
+  padding-bottom: 0;
 }
 
 .modal-footer {
-  padding-top: 15px;
-  padding-bottom: 15px;
+  padding-top: 10px;
+  padding-bottom: 10px;
 }
 
 .modal-header {
