--- a/src/styles.css
+++ b/src/styles.css
@@ -1,4 +1,4 @@
-@font-face {
+/* @font-face {
   font-family: "roboto";
   src: url("./assets/fonts/roboto-regular-webfont.eot");
   src: url("./assets/fonts/roboto-regular-webfont.eot?#iefix")
@@ -69,12 +69,77 @@
     url("./assets/fonts/roboto-thin-webfont.svg#robotothin") format("svg");
   font-weight: 100;
   font-style: normal;
+} */
+@font-face {
+  font-family: "hind_vadodara";
+  src: url("./assets/fonts/hindvadodara-bold-webfont.eot");
+  src: url("./assets/fonts/hindvadodara-bold-webfont.eot?#iefix")
+      format("embedded-opentype"),
+    url("./assets/fonts/hindvadodara-bold-webfont.woff2") format("woff2"),
+    url("./assets/fonts/hindvadodara-bold-webfont.woff") format("woff"),
+    url("./assets/fonts/hindvadodara-bold-webfont.ttf") format("truetype"),
+    url("./assets/fonts/hindvadodara-bold-webfont.svg#hind_vadodarabold")
+      format("svg");
+  font-weight: 700;
+  font-style: normal;
+}
+@font-face {
+  font-family: "hind_vadodara";
+  src: url("./assets/fonts/hindvadodara-semibold-webfont.eot");
+  src: url("./assets/fonts/hindvadodara-semibold-webfont.eot?#iefix")
+      format("embedded-opentype"),
+    url("./assets/fonts/hindvadodara-semibold-webfont.woff2") format("woff2"),
+    url("./assets/fonts/hindvadodara-semibold-webfont.woff") format("woff"),
+    url("./assets/fonts/hindvadodara-semibold-webfont.ttf") format("truetype"),
+    url("./assets/fonts/hindvadodara-semibold-webfont.svg#hind_vadodarasemibold")
+      format("svg");
+  font-weight: 600;
+  font-style: normal;
+}
+@font-face {
+  font-family: "hind_vadodara";
+  src: url("./assets/fonts/hindvadodara-regular-webfont.eot");
+  src: url("./assets/fonts/hindvadodara-regular-webfont.eot?#iefix")
+      format("embedded-opentype"),
+    url("./assets/fonts/hindvadodara-regular-webfont.woff2") format("woff2"),
+    url("./assets/fonts/hindvadodara-regular-webfont.woff") format("woff"),
+    url("./assets/fonts/hindvadodara-regular-webfont.ttf") format("truetype"),
+    url("./assets/fonts/hindvadodara-regular-webfont.svg#hind_vadodararegular")
+      format("svg");
+  font-weight: 400;
+  font-style: normal;
+}
+@font-face {
+  font-family: "hind_vadodara";
+  src: url("./assets/fonts/hindvadodara-medium-webfont.eot");
+  src: url("./assets/fonts/hindvadodara-medium-webfont.eot?#iefix")
+      format("embedded-opentype"),
+    url("./assets/fonts/hindvadodara-medium-webfont.woff2") format("woff2"),
+    url("./assets/fonts/hindvadodara-medium-webfont.woff") format("woff"),
+    url("./assets/fonts/hindvadodara-medium-webfont.ttf") format("truetype"),
+    url("./assets/fonts/hindvadodara-medium-webfont.svg#hind_vadodaramedium")
+      format("svg");
+  font-weight: 500;
+  font-style: normal;
+}
+@font-face {
+  font-family: "hind_vadodara";
+  src: url("./assets/fonts/hindvadodara-light-webfont.eot");
+  src: url("./assets/fonts/hindvadodara-light-webfont.eot?#iefix")
+      format("embedded-opentype"),
+    url("./assets/fonts/hindvadodara-light-webfont.woff2") format("woff2"),
+    url("./assets/fonts/hindvadodara-light-webfont.woff") format("woff"),
+    url("./assets/fonts/hindvadodara-light-webfont.ttf") format("truetype"),
+    url("./assets/fonts/hindvadodara-light-webfont.svg#hind_vadodaralight")
+      format("svg");
+  font-weight: 300;
+  font-style: normal;
 }
 html,
 body {
   font-size: 100%;
   font-weight: 400;
-  font-family: "roboto";
+  font-family: "hind_vadodara";
 }
 
 #toast-container > .toast-error:before,
