--- a/src/app/shared/dialog/edit-user/edit-user.component.html
+++ b/src/app/shared/dialog/edit-user/edit-user.component.html
@@ -2,10 +2,10 @@
   <div class="modal fade" id="user-edit-modal" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle"
     aria-hidden="true">
     <div class="modal-dialog modal-lg" role="document">
-      <form>
+      <form [formGroup]="editUserForm" (ngSubmit)="onSubmit()">
         <div class="modal-content">
           <div class="modal-header text-center d-block text-white bg-success pt-3 pb-3">
-            <h5 class="modal-title  font-16">Edit User</h5>
+            <h5 class="modal-title font-16">Edit User</h5>
           </div>
           <div class="modal-body">
             <div class="row">
@@ -14,58 +14,76 @@
                   <div class="form-group row">
                     <label class="col-sm-3 col-form-label">User Name:</label>
                     <div class="col-sm-9">
-                      <input type="text" class="form-control" name="userName" [(ngModel)]="updateData.userName"
-                        required>
+                      <input type="text" class="form-control" formControlName="userName">
+                      <small
+                        [class.d-none]="editUserForm.get('userName').valid || editUserForm.get('userName').untouched"
+                        class="text-danger">User Name is required</small>
                     </div>
                   </div>
                   <div class="form-group row">
                     <label class="col-sm-3 col-form-label">User ID:</label>
                     <div class="col-sm-9">
-                      <input type="email" class="form-control" name="userId" [(ngModel)]="updateData.userId" required>
+                      <input type="email" class="form-control" formControlName="userId">
+                      <small [class.d-none]="editUserForm.get('userId').valid || editUserForm.get('userId').untouched"
+                        class="text-danger">User
+                        ID is required</small>
                     </div>
                   </div>
                   <div class="form-group row">
                     <label class="col-sm-3 col-form-label">Email:</label>
                     <div class="col-sm-9">
-                      <input type="email" class="form-control" name="email" [(ngModel)]="updateData.email" required>
+                      <input type="email" class="form-control" formControlName="email">
+                      <small [class.d-none]="editUserForm.get('email').valid || editUserForm.get('email').untouched"
+                        class="text-danger">Email
+                        is required</small>
                     </div>
                   </div>
 
                   <div class="form-group row">
                     <label class="col-sm-3 col-form-label">Role:</label>
                     <div class="col-sm-9">
-                      <select class="form-control" name="role" [(ngModel)]="updateData.role">
-                        <option hidden="">Select</option>
+                      <select class="form-control" formControlName="role">
+                        <option disabled>Select Role</option>
                         <option value="Administrator">Administrator</option>
                         <option value="Telemarketing">Telemarketing</option>
                         <option value="Customer Service">Customer Service</option>
                         <option value="Finance">Finance</option>
                         <option value="Supervisor">Supervisor</option>
                       </select>
+                      <small [class.d-none]="editUserForm.get('role').valid || editUserForm.get('role').untouched"
+                        class="text-danger">Role is
+                        required</small>
                     </div>
                   </div>
 
                   <div class="form-group row">
                     <label class="col-sm-3 col-form-label">Department:</label>
                     <div class="col-sm-9">
-                      <input type="email" class="form-control" name="department" [(ngModel)]="updateData.department"
-                        required>
+                      <input type="email" class="form-control" formControlName="department">
+                      <small
+                        [class.d-none]="editUserForm.get('department').valid || editUserForm.get('department').untouched"
+                        class="text-danger">Department is required</small>
                     </div>
                   </div>
 
                   <div class="form-group row">
                     <label class="col-sm-3 col-form-label">New Password:</label>
                     <div class="col-sm-9">
-                      <input type="password" class="form-control" name="password" [(ngModel)]="updateData.password"
-                        required>
+                      <input type="password" class="form-control" formControlName="password">
+                      <small
+                        [class.d-none]="editUserForm.get('password').valid || editUserForm.get('password').untouched"
+                        class="text-danger">Password is required</small>
                     </div>
                   </div>
 
                   <div class="form-group row">
                     <label class="col-sm-3 col-form-label">Repeat Password:</label>
                     <div class="col-sm-9">
-                      <input type="password" class="form-control" name="repeatPassword"
-                        [(ngModel)]="updateData.repeatPassword" required>
+                      <input type="password" class="form-control" formControlName="repeatPassword">
+                      <small
+                        [class.d-none]="editUserForm.get('repeatPassword').valid || editUserForm.get('repeatPassword').untouched"
+                        class="text-danger">Password is required</small>
+                      <!-- <small *ngIf="editUserForm.errors?.misMatch" class="text-danger">Password does not match</small> -->
                     </div>
                   </div>
                 </div>
@@ -75,7 +93,8 @@
           <div class="modal-footer bg-whitesmoke br">
             <button type="button" class="btn btn-secondary border-0 shadow-none font-weight-normal"
               (click)="closeModal()" data-dismiss="modal">Cancel</button>
-            <button type="submit" class="btn btn-primary font-weight-normal" (click)="editUser()">Create</button>
+            <button type="submit" class="btn btn-primary font-weight-normal"
+              [disabled]="!editUserForm.valid">Create</button>
           </div>
         </div>
       </form>
