--- a/src/app/shared/sidebar/sidebar.component.html
+++ b/src/app/shared/sidebar/sidebar.component.html
@@ -34,8 +34,8 @@
       </ul>
       <ul class="dropdown-menu bg-transparent">
         <span class="font-14 font-weight-600 ml-5 pl-2">Assist</span>
-        <li class="pb-0 pt-0"><a class="nav-link">NCD</a></li>
-        <li class="pb-0 pt-0"><a class="nav-link">Market Value</a></li>
+        <li class="pb-0 pt-0"><a class="nav-link" routerLink="/admin/follow/assist/ncd">NCD</a></li>
+        <li class="pb-0 pt-0"><a class="nav-link" routerLink="/admin/follow/assist/market-value">Market Value</a></li>
       </ul>
     </li>
 
