--- a/src/app/shared/header/header.component.html
+++ b/src/app/shared/header/header.component.html
@@ -3,7 +3,7 @@
   <div class="form-inline mr-auto">
     <ul class="navbar-nav mr-3">
       <li>
-        <a href="javascript:;" data-toggle="sidebar" class="nav-link nav-link-lg collapse-btn">
+        <a data-toggle="sidebar" class="nav-link nav-link-lg collapse-btn">
           <i class="fas fa-bars"></i>
         </a>
       </li>
@@ -12,7 +12,7 @@
   </div>
   <ul class="navbar-nav navbar-right">
     <li class="dropdown dropdown-list-toggle">
-      <a href="javascript:;" data-toggle="dropdown" class="nav-link notification-toggle nav-link-lg">
+      <a data-toggle="dropdown" class="nav-link notification-toggle nav-link-lg">
         <i class="far fa-bell" style="font-size: 24px;"></i>
         <span class="notification-count bg-red">4</span>
       </a>
@@ -39,29 +39,29 @@
           </div>
         </div>
         <div class="dropdown-footer text-center">
-          <a href="javascript:;">View All <i class="fas fa-chevron-right"></i></a>
+          <a>View All <i class="fas fa-chevron-right"></i></a>
         </div>
       </div>
     </li>
 
 
     <li class="dropdown">
-      <a href="javascript:;" data-toggle="dropdown" class="nav-link dropdown-toggle nav-link-lg nav-link-user">
+      <a data-toggle="dropdown" class="nav-link dropdown-toggle nav-link-lg nav-link-user">
         <img alt="image" src="assets/img/icons/user_profile_icon.png" class="mr-2">
         <span class="d-sm-none d-lg-inline-block"></span> john doe Admin <i class="fa fa-chevron-down ml-4"></i></a>
       <div class="dropdown-menu dropdown-menu-right">
         <div class="dropdown-title">Hello Alexa Lopez <i class="fa fa-chevron-gown"></i></div>
-        <a href="javascript:;" class="dropdown-item has-icon">
+        <a class="dropdown-item has-icon">
           <i class="far fa-user"></i> Profile
         </a>
-        <a href="javascript:;" class="dropdown-item has-icon">
+        <a class="dropdown-item has-icon">
           <i class="fas fa-bolt"></i> Activities
         </a>
         <a href="" class="dropdown-item has-icon">
           <i class="fas fa-cog"></i> Settings
         </a>
         <div class="dropdown-divider"></div>
-        <a href="javascript:;" class="dropdown-item has-icon text-danger">
+        <a class="dropdown-item has-icon text-danger" (click)="logout()">
           <i class="fas fa-sign-out-alt"></i> Logout
         </a>
       </div>
