--- a/src/app/admin/common-basket/common-basket.component.html
+++ b/src/app/admin/common-basket/common-basket.component.html
@@ -12,7 +12,8 @@
           <div class="row">
             <div class="col-md-6">
               <i class="fa-search fas ml-3 position-absolute text-muted" aria-hidden="true"></i>
-              <input class="form-control pl-5 w-100" type="text" placeholder="Search" aria-label="Search">
+              <input class="form-control pl-5 w-100" type="text" placeholder="Search" aria-label="Search" name="search"
+                [(ngModel)]="search" (keyup)="searchFor($event.target.value)">
             </div>
             <div class="col-md-6">
               <select [(ngModel)]="filter" name="Filter" class="font-weight-600 form-control"
@@ -29,7 +30,7 @@
 <section class="section">
   <div class="row">
     <div class="col-lg-12">
-      <table mat-table [dataSource]="dataSource" class="mat-elevation-z8" class="table table-bordered mb-0">
+      <table mat-table [dataSource]="dataSource" multiTemplateDataRows class="mat-elevation-z8">
         <ng-container matColumnDef="vehiclePlateNo">
           <th scope="col" mat-header-cell *matHeaderCellDef> Car Register </th>
           <td mat-cell *matCellDef="let element"> {{element.vehiclePlateNo}} </td>
@@ -55,11 +56,19 @@
           <td mat-cell *matCellDef="let element"> {{element.carModel}} </td>
         </ng-container>
 
+        <ng-container matColumnDef="marketValue">
+          <th scope="col" mat-header-cell *matHeaderCellDef> Market Value </th>
+          <td mat-cell *matCellDef="let element">
+            <button
+              class="bg-amber btn btn-outline width-per-100 text-dark font-weight-600">{{element.marketValue}}</button>
+          </td>
+        </ng-container>
+
         <ng-container matColumnDef="status">
           <th scope="col" mat-header-cell *matHeaderCellDef> Status </th>
           <td mat-cell *matCellDef="let element">
-            <button
-              class="bg-amber btn rounded-pill width-per-100 text-dark font-weight-600">{{element.status}}</button>
+            <button class="bg-amber btn rounded-pill width-per-100 text-dark font-weight-600"
+              (click)="element.isExpanded = !element.isExpanded">{{element.status}}</button>
           </td>
         </ng-container>
 
@@ -72,9 +81,25 @@
           </td>
         </ng-container>
 
-        <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-        <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+        <!-- Expanded Content Column - The detail row is made up of this one column that spans across all columns -->
+        <ng-container matColumnDef="expandedDetail">
+          <td mat-cell *matCellDef="let element" [attr.colspan]="columnsToDisplay.length">
+            <div class="example-element-detail" [@detailExpand]="element == expandedElement ? 'expanded' : 'collapsed'">
+              <div class="example-element-description">
+                <app-follow-urgent-ncd [data]="element.vehiclePlateNo"></app-follow-urgent-ncd>
+              </div>
+            </div>
+          </td>
+        </ng-container>
+
+        <tr mat-header-row *matHeaderRowDef="columnsToDisplay"></tr>
+        <tr mat-row *matRowDef="let element; columns: columnsToDisplay;" class="example-element-row"
+          [class.example-expanded-row]="expandedElement === element"
+          (click)="expandedElement = expandedElement === element ? null : element">
+        </tr>
+        <tr mat-row *matRowDef="let row; columns: ['expandedDetail']" class="example-detail-row"></tr>
       </table>
+      <mat-paginator [pageSize]="10" (page)="pageChanged($event)"></mat-paginator>
     </div>
   </div>
 </section>
