--- a/src/app/auth/forgot-password/forgot-password.component.html
+++ b/src/app/auth/forgot-password/forgot-password.component.html
@@ -12,21 +12,11 @@
               </p>
               <form>
                 <div class="form-group">
-                  <input
-                    id="email"
-                    type="email"
-                    name="email"
-                    placeholder="Your Email.."
-                    class="form-control rounded-0"
-                    [(ngModel)]="forgotPasswordData.email"
-                  />
+                  <input id="email" type="email" name="email" placeholder="Your Email.." class="form-control rounded-0"
+                    [(ngModel)]="forgotPasswordData.email" />
                 </div>
                 <div class="form-group mt-5">
-                  <button
-                    type="button"
-                    (click)="forgotPassword()"
-                    class="btn btn-info w-50 reset-btn"
-                  >
+                  <button type="button" (click)="forgotPassword()" class="btn btn-info w-50 reset-btn">
                     Reset Password
                   </button>
                 </div>
@@ -38,4 +28,3 @@
     </div>
   </div>
 </section>
-<ngx-spinner bdColor = "rgba(0, 0, 0, 0.8)" size = "medium" color = "#fff" type = "ball-clip-rotate-multiple" [fullScreen] = "true"></ngx-spinner>
