--- a/src/app/basket-details/follow-urgent-ncd/follow-urgent-ncd.component.html
+++ b/src/app/basket-details/follow-urgent-ncd/follow-urgent-ncd.component.html
@@ -1,103 +1,135 @@
-<h2 class="bg-blue-grey font-17 mb-0 p-15 pl-4">Car Register {{data}}</h2>
-<div class="d-flex">
-  <div class="border-right col-md-6 pl-4 pr-5">
-    <form>
+<h2 class="bg-blue-grey font-17 mb-0 p-15 pl-4">Car Register #{{currentData}}</h2>
+<form [formGroup]="basketDetailForm">
+  <div class="d-flex">
+    <div class="border-right col-md-6 pl-4 pr-5">
       <div class="form-group row mt-3">
         <label for="inputEmail3" class="col-sm-3 col-form-label">Car Reg. No.</label>
         <div class="col-sm-9">
-          <input type="text" class="form-control" placeholder="Car Reg. No.">
+          <input type="text" class="form-control" formControlName="vehiclePlateNo">
+          <div *ngIf="basketDetailForm.get('vehiclePlateNo').invalid && basketDetailForm.get('vehiclePlateNo').touched"
+            class="error">Car Reg. No. is required</div>
         </div>
       </div>
       <div class="form-group row">
         <label for="inputEmail3" class="col-sm-3 col-form-label">Model Car</label>
         <div class="col-sm-9">
-          <input type="text" class="form-control" placeholder="Perodua - Axia">
+          <input type="text" class="form-control" formControlName="carModel">
+          <div *ngIf="basketDetailForm.get('carModel').invalid && basketDetailForm.get('carModel').touched"
+            class="error">Model Car is required</div>
         </div>
       </div>
       <div class="form-group row">
         <label for="inputEmail3" class="col-sm-3 col-form-label">Name</label>
         <div class="col-sm-9">
-          <input type="text" class="form-control" placeholder="Muzaidi Samad">
+          <input type="text" class="form-control" formControlName="customerName">
+          <div *ngIf="basketDetailForm.get('customerName').invalid && basketDetailForm.get('customerName').touched"
+            class="error">Name is required</div>
         </div>
       </div>
       <div class="form-group row">
         <label for="inputEmail3" class="col-sm-3 col-form-label">NRIC</label>
         <div class="col-sm-9">
-          <input type="text" class="form-control" placeholder="901213134112">
+          <input type="text" class="form-control" formControlName="nric">
+          <div *ngIf="basketDetailForm.get('nric').invalid && basketDetailForm.get('nric').touched" class="error">
+            NRIC is required</div>
         </div>
       </div>
       <div class="form-group row">
         <label for="inputEmail3" class="col-sm-3 col-form-label">Takaful Name</label>
         <div class="col-sm-9">
-          <input type="text" class="form-control" placeholder="Takaful Malaysia">
+          <input type="text" class="form-control" formControlName="principal">
+          <div *ngIf="basketDetailForm.get('principal').invalid && basketDetailForm.get('principal').touched"
+            class="error">
+            Takaful Name is required</div>
         </div>
       </div>
       <div class="form-group row">
         <label for="inputEmail3" class="col-sm-3 col-form-label">Cover Type</label>
         <div class="col-sm-9">
-          <input type="text" class="form-control" placeholder="Comprehensive Takaful">
+          <input type="text" class="form-control" formControlName="coverType">
+          <div *ngIf="basketDetailForm.get('coverType').invalid && basketDetailForm.get('coverType').touched"
+            class="error">
+            Cover Type is required</div>
         </div>
       </div>
       <div class="form-group row">
         <label for="inputEmail3" class="col-sm-3 col-form-label">Sum Insured</label>
         <div class="col-sm-9">
-          <input type="text" class="form-control" placeholder="RM 80 000">
+          <input type="text" class="form-control" formControlName="sumInsured">
+          <div *ngIf="basketDetailForm.get('sumInsured').invalid && basketDetailForm.get('sumInsured').touched"
+            class="error">
+            Sum Insured is required</div>
         </div>
       </div>
       <div class="form-group row">
         <label for="inputEmail3" class="col-sm-3 col-form-label">Extra Coverage</label>
         <div class="col-sm-9">
-          <input type="text" class="form-control" placeholder="RM90.00">
+          <input type="text" class="form-control" formControlName="coverage">
+          <div *ngIf="basketDetailForm.get('coverage').invalid && basketDetailForm.get('coverage').touched"
+            class="error">
+            Extra Coverage is required</div>
         </div>
       </div>
       <div class="form-group row">
         <label for="inputEmail3" class="col-sm-3 col-form-label">NCD Effective Date</label>
         <div class="col-sm-9">
-          <input type="text" class="form-control" placeholder="12 Dec 2021">
+          <input type="date" class="form-control" formControlName="effectiveDate">
+          <div *ngIf="basketDetailForm.get('effectiveDate').invalid && basketDetailForm.get('effectiveDate').touched"
+            class="error">
+            NCD Effective Date is required</div>
         </div>
       </div>
       <div class="form-group row">
         <label for="inputEmail3" class="col-sm-3 col-form-label">Phone Number</label>
         <div class="col-sm-9">
-          <input type="text" class="form-control" placeholder="011-21414141">
+          <input type="text" class="form-control" formControlName="phoneNo">
+          <div *ngIf="basketDetailForm.get('phoneNo').invalid && basketDetailForm.get('phoneNo').touched" class="error">
+            Phone Number is required</div>
         </div>
       </div>
       <div class="form-group row">
         <label for="inputEmail3" class="col-sm-3 col-form-label">Email</label>
         <div class="col-sm-9">
-          <input type="text" class="form-control" placeholder="Muz90@gmail.com">
+          <input type="text" class="form-control" formControlName="email">
+          <div *ngIf="basketDetailForm.get('email').invalid && basketDetailForm.get('email').touched" class="error">
+            Email is required</div>
         </div>
       </div>
       <div class="form-group row">
         <label for="inputEmail3" class="col-sm-3 col-form-label">Address</label>
         <div class="col-sm-9">
-          <input type="text" class="form-control form-group" placeholder="-">
-          <input type="text" class="form-control " placeholder="-">
+          <input type="text" class="form-control form-group" formControlName="address1">
+          <div *ngIf="basketDetailForm.get('address1').invalid && basketDetailForm.get('address1').touched"
+            class="error">
+            Address is required</div>
+          <input type="text" class="form-control " formControlName="address2">
         </div>
       </div>
       <div class="form-group row">
         <label for="inputEmail3" class="col-sm-3 col-form-label">Postcode</label>
         <div class="col-sm-9">
-          <input type="text" class="form-control" placeholder="43000">
+          <input type="text" class="form-control" formControlName="postcode">
+          <div *ngIf="basketDetailForm.get('postcode').invalid && basketDetailForm.get('postcode').touched"
+            class="error">
+            Postcode is required</div>
         </div>
       </div>
       <div class="form-group row">
         <label for="inputEmail3" class="col-sm-3 col-form-label">Status</label>
         <div class="col-sm-9">
-          <input type="text" class="form-control" placeholder="Pending">
+          <input type="text" class="form-control" formControlName="status">
+          <div *ngIf="basketDetailForm.get('status').invalid && basketDetailForm.get('status').touched" class="error">
+            Status is required</div>
         </div>
       </div>
       <div class="form-group row">
         <label for="inputEmail3" class="col-sm-3 col-form-label">Remarks</label>
         <div class="col-sm-9">
-
-          <textarea class="form-control" rows="3" placeholder="NCD Not Update"></textarea>
+          <textarea class="form-control" rows="3" formControlName="remarks"></textarea>
         </div>
       </div>
-    </form>
-  </div>
-  <div class="col-md-6">
-    <form>
+    </div>
+    <div class="col-md-6">
       <div class="form-group row mt-3  pl-4 pr-5">
         <label class="col-form-label col-sm-4 font-weight-bold align-self-center">Step Procedure</label>
       </div>
@@ -119,8 +151,8 @@
           <select class="form-control w-75 form-group">
             <option>Select</option>
           </select>
-          <input type="text" class="form-control w-75 form-group text-muted" placeholder="Amount">
-          <textarea class="form-control" rows="3" placeholder="Remarks"></textarea>
+          <input type="text" class="form-control w-75 form-group text-muted" formControlName="refundAmount">
+          <textarea class="form-control" rows="3" formControlName="refundRemark"></textarea>
         </div>
       </div>
       <div class="form-group row  pl-4 pr-5">
@@ -129,8 +161,8 @@
           <select class="form-control w-75 form-group">
             <option>Select</option>
           </select>
-          <input type="text" class="form-control w-75 form-group text-muted" placeholder="Amount">
-          <textarea class="form-control mt-2" rows="3" placeholder="Remarks"></textarea>
+          <input type="text" class="form-control w-75 form-group text-muted" formControlName="topupAmount">
+          <textarea class="form-control mt-2" rows="3" formControlName="topupRemark"></textarea>
         </div>
       </div>
       <div class="row">
@@ -139,6 +171,6 @@
           <button class="bg-green btn text-white w-25">Update</button>
         </div>
       </div>
-    </form>
+    </div>
   </div>
-</div>
+</form>
