--- a/src/styles.css
+++ b/src/styles.css
@@ -146,3 +146,10 @@ body {
 #toast-container > .toast-success:before {
   content: "";
 }
+
+.error {
+  width: 100%;
+  margin-top: 0.25rem;
+  font-size: 80%;
+  color: #dc3545;
+}
